--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -34,5 +34,7 @@ Tested:  Date TBD
             am eating sushi with good company. </p>
             <br>
             <blockquote> A dog is the only thing on earth that loves you more than you love yourself. - George Eliot</blockquote>
-</body>
+    <footer>
+    </footer>
+ </body>
 </html>
