--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -9,9 +9,13 @@ Tested:  September 3, 2023
 ******************************************************************************
 -->
 <html lang="en-US">
-<head>
-               <meta charset="utf-8">
-               <title>Home page</title>
+<head> 
+        <meta charset="utf-8">
+        <title>Home page</title>
+               
+        <link rel="stylesheet" 
+        href="style.css">
+        
 </head>
 <body>
     <main>
@@ -32,7 +36,7 @@ Tested:  September 3, 2023
 </main>
         <br>
 <footer>
-            Kasey Freeman, kefreeman@umsystem.edu. Everything on this website is my intelletual property. Copying or duplicating material is not allowed.
+            Kasey Freeman, kefreeman@umsystem.edu. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
 </footer>
 </body>
 
