--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -11,11 +11,8 @@ Tested:  September 3, 2023
 <html lang="en-US">
 <head> 
         <meta charset="utf-8">
-        <title>Home page</title>
-               
-        <link rel="stylesheet" 
-        href="style.css">
-        
+        <title>Home page</title>     
+        <link rel="stylesheet" tyle="text/css" href="style.css">
 </head>
 <body>
     <main>
