--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -12,8 +12,7 @@ Tested:  September 3, 2023
 <head> 
         <meta charset="utf-8">
         <title>Home page</title>     
-        <link rel="stylesheet" 
-        href="style.css">
+        <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <main>
