--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -12,11 +12,12 @@ Tested:  September 3, 2023
 <head> 
         <meta charset="utf-8">
         <title>Home page</title>     
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" 
+        href="style.css">
 </head>
 <body>
     <main>
-    <h1>Welcome!</h1>
+    <h1 id="heading1">Welcome!</h1>
     <h3>Getting to know me</h3>
     <div>
         <p> 
