--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -6,7 +6,7 @@ Title:  About Me
 Use:  To allow users to get to know me as a person.
 Author:  Kasey Freeman
 Developed: August 31, 2023
-Tested:  Date TBD
+Tested:  September 13, 2023
 ******************************************************************************
 -->
 <html lang="en-US">
@@ -33,8 +33,11 @@ Tested:  Date TBD
             drinking dark roast coffee and jasmine tea (<em>separately</em>). I am happiest when I
             am eating sushi with good company. </p>
             <br>
+            <a href="Freeman resume.pdf">Check out my resume!</a>
+            <br>
             <blockquote> A dog is the only thing on earth that loves you more than you love yourself. - George Eliot</blockquote>
     <footer>
+        Kasey Freeman, kefreeman@umsystem.edu. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
     </footer>
  </body>
 </html>
