--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -23,6 +23,7 @@ Tested:  September 13, 2023
             Missouri for the Online Educator Graduate Certificate. I will complete this in
             December 2023. 
             <br>
+
             I am currently a Program Coordinator with Missouri Online.
             Missouri Online supports <em>all</em> online programs in the University of Missouri
             System. Being a Program Coordinator has deepened my interest in online
@@ -33,7 +34,8 @@ Tested:  September 13, 2023
             drinking dark roast coffee and jasmine tea (<em>separately</em>). I am happiest when I
             am eating sushi with good company. </p>
             <br>
-            <a href="Freeman resume.pdf">Check out my resume!</a>
+            <a href="islt_7310/Freeman resume.pdf.pdf">Check out my resume!</a>
+            
             <br>
             <blockquote> A dog is the only thing on earth that loves you more than you love yourself. - George Eliot</blockquote>
     <footer>
