--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -34,7 +34,7 @@ Tested:  September 13, 2023
             drinking dark roast coffee and jasmine tea (<em>separately</em>). I am happiest when I
             am eating sushi with good company. </p>
             <br>
-            <a href="islt_7310/Freeman resume.pdf.pdf">Check out my resume!</a>
+            <a href="desktop/islt_7310/Freeman resume.pdf"> Check out my resume!</a>
             
             <br>
             <blockquote> A dog is the only thing on earth that loves you more than you love yourself. - George Eliot</blockquote>
