--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -34,9 +34,10 @@ Tested:  September 13, 2023
             drinking dark roast coffee and jasmine tea (<em>separately</em>). I am happiest when I
             am eating sushi with good company. </p>
             <br>
-            <a href="desktop/islt_7310/Freeman resume.pdf"> Check out my resume!</a>
-            
+            <base href="https://kefr7t.github.io/islt_7310/"/>
+            <a href="/islt_7310/Freeman resume.pdf.pdf">Check out my resume!</a>
             <br>
+
             <blockquote> A dog is the only thing on earth that loves you more than you love yourself. - George Eliot</blockquote>
     <footer>
         Kasey Freeman, kefreeman@umsystem.edu. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
