--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -34,7 +34,7 @@ Tested:  September 13, 2023
             drinking dark roast coffee and jasmine tea (<em>separately</em>). I am happiest when I
             am eating sushi with good company. </p>
             <br>
-            <base href="https://kefr7t.github.io/islt_7310/"/>
+            <base href="https://kefr7t.github.io/islt_7310/about.html"/>
             <a href="/islt_7310/Freeman resume.pdf.pdf">Check out my resume!</a>
             <br>
 
