--- a/practice-coding.html
+++ b/practice-coding.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
@@ -9,13 +8,14 @@
     <main>
 <p> Test list </p> 
 <ol>
-    <il> number 1 <il>
-    <il> number 2 <il> 
-
+    <il> number 1 </il>
+    <il> number 2 </il> 
+</ol>
 <p> Test 2 </p>
 <ul>
-    <il> bullet 1 <il>
-    <il> bullet 2 <il>
+    <il> bullet 1 </il>
+    <il> bullet 2 </il>
+</ul>
     </main>
 </body>
 </html>
