--- a/practice-coding.html
+++ b/practice-coding.html
@@ -7,14 +7,14 @@
 <body>
 <p>Test list</p> 
 <ol>
-    <il>number 1</il>
-    <il>number 2</il> 
+    <li>number 1</li>
+    <li>number 2</li> 
 </ol>
 
 <p>Test 2</p>
 <ul>
-    <il>bullet 1</il>
-    <il>bullet 2</il>
+    <li>bullet 1</li>
+    <li>bullet 2</li>
 </ul>
 </body>
 </html>
