--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -16,6 +16,13 @@ Tested:  September 3, 2023
         href="style.css">
 </head>
 <body>
+<nav>
+    <ul>
+        <li>Home</li>
+        <li>About</li>
+        <li>#projects.html</li>
+    </ul>
+</nav>
     <main>
     <h1 id="heading1">Welcome!</h1>
     <h3>Getting to know me</h3>
