--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -14,6 +14,8 @@ Tested:  September 3, 2023
         <title>Home page</title>     
         <link rel="stylesheet" 
         href="style.css">
+        <link rel="stylesheet"
+        href="nav.css">
 </head>
 <body>
 <nav>
