--- a/islt_7310/project.html
+++ b/islt_7310/project.html
@@ -21,7 +21,7 @@ Tested:  September 14, 2023
     <ul>
         <li>Home</li>
         <li>About</li>
-        <li>#projects.html
+        <li><a>#projects.html</a>
             <ul>
                 <li>Link 1</li>
                 <li>Link 2</li>
