--- a/islt_7310/project.html
+++ b/islt_7310/project.html
@@ -21,11 +21,11 @@ Tested:  September 14, 2023
     <ul>
         <li>Home</li>
         <li>About</li>
-        <li><a>#projects.html</a>
+        <li><a>#projects.html
             <ul>
                 <li>Link 1</li>
                 <li>Link 2</li>
-                <li>Link 3</li>
+                <li>Link 3</li></a>
             </ul>
         </li>
     </ul>
