--- a/islt_7310/project.html
+++ b/islt_7310/project.html
@@ -25,7 +25,7 @@ Tested:  September 14, 2023
             <ul>
                 <li>Link 1</li>
                 <li>Link 2</li>
-                <li>Link 3</li></a>
+                <li>Link 3</li>
             </ul>
         </li>
     </ul>
