--- a/islt_7310/project.html
+++ b/islt_7310/project.html
@@ -19,13 +19,13 @@ Tested:  September 14, 2023
 
 <nav>
     <ul>
-        <li>Home</li>
-        <li>About</li>
-        <li><a>#projects.html
+        <li class="active"><a href="#"></li>Home</a></li>
+        <li></li><a href="#"></li>About</a></li>
+        <li><a href="#">#projects.html</a>
             <ul>
-                <li>Link 1</li>
-                <li>Link 2</li>
-                <li>Link 3</li>
+                <li><a href="#">Link 1</a></li>
+                <li><a href="#">Link 2</a></li>
+                <li><a href="#">Link 3</a></li>
             </ul>
         </li>
     </ul>
