--- a/islt_7310/project.html
+++ b/islt_7310/project.html
@@ -19,8 +19,8 @@ Tested:  September 14, 2023
 
 <nav>
     <ul>
-        <li class="active"><a href="#"></li>Home</a></li>
-        <li></li><a href="#"></li>About</a></li>
+        <li>Home</li>
+        <li>About</li>
         <li><a href="#">#projects.html</a>
             <ul>
                 <li><a href="#">Link 1</a></li>
