--- a/islt_7310/project.html
+++ b/islt_7310/project.html
@@ -21,7 +21,7 @@ Tested:  September 14, 2023
     <ul>
         <li>Home</li>
         <li>About</li>
-        <li>#projects.html
+        <li><a href="#">#projects.html</a>
             <ul>
                 <li><a href="#">Link 1</a></li>
                 <li><a href="#">Link 2</a></li>
