--- a/islt_7310/project.html
+++ b/islt_7310/project.html
@@ -19,9 +19,9 @@ Tested:  September 14, 2023
 
 <nav>
     <ul>
-        <li>Home</li>
-        <li>About</li>
-        <li>#projects.html
+        <li class="active"><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Projects</a>
             <ul>
                 <li><a href="#">Link 1</a></li>
                 <li><a href="#">Link 2</a></li>
