--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -18,6 +18,14 @@ Tested:  September 3, 2023
         href="nav.css">
 </head>
 <body>
+<nav>
+    <ul>
+        <li>Home</li>
+        <li>About</li>
+        <li>#projects.html</li>
+    </ul>
+</nav>
+<br>
     <main>
     <h1 id="heading1">Welcome!</h1>
     <h3>Getting to know me</h3>
@@ -32,13 +40,7 @@ Tested:  September 3, 2023
         </p>
     </div>
     <br>
-    <nav>
-        <ul>
-            <li>Home</li>
-            <li>About</li>
-            <li>#projects.html</li>
-        </ul>
-    </nav>
+<nav></nav>
 </main>
         <br>
 <footer>
