--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -18,13 +18,14 @@ Tested:  September 3, 2023
         href="nav.css">
 </head>
 <body>
+    <div class="navigation-home">
 <nav>
     <ul>
         <li>Home</li>
         <li>About</li>
         <li>#projects.html</li>
     </ul>
-</nav>
+</nav></div>
 <br>
     <main>
     <h1 id="heading1">Welcome!</h1>
