--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -18,7 +18,7 @@ Tested:  September 3, 2023
         href="nav.css">
 </head>
 <body>
-    <div class="navigation-home">
+    <div id="navigation-home">
 <nav>
     <ul>
         <li>Home</li>
