--- a/islt_7310/project.html
+++ b/islt_7310/project.html
@@ -16,6 +16,7 @@ Tested:  September 14, 2023
         href="nav.css">
 </head>
 <body>
+    <div id="navigation-project">
 <nav>
     <ul>
         <li class="active"><a href="#">Home</a></li>
@@ -28,6 +29,6 @@ Tested:  September 14, 2023
             </ul>
         </li>
     </ul>
-</nav>
+</nav> </div>
 </body>
 </html>
