--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -21,11 +21,11 @@ Tested:  September 3, 2023
     <div id="navigation-home">
 <nav>
     <ul>
-        <li>Home</li>
+        <id="navigation-home"><li>Home</li>
         <li>About</li>
         <li>#projects.html</li>
     </ul>
-</nav></div>
+</nav></div></id>
 <br>
     <main>
     <h1 id="heading1">Welcome!</h1>
