--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -18,14 +18,16 @@ Tested:  September 3, 2023
         href="nav.css">
 </head>
 <body>
-    <div id="navigation-home">
+    <div><id="navigation-home">
 <nav>
     <ul>
         <id="navigation-home"><li>Home</li>
         <li>About</li>
         <li>#projects.html</li>
     </ul>
-</nav></div></id>
+</nav>
+</id>
+</div>
 <br>
     <main>
     <h1 id="heading1">Welcome!</h1>
