--- a/islt_7310/project.html
+++ b/islt_7310/project.html
@@ -16,7 +16,7 @@ Tested:  September 14, 2023
         href="nav.css">
 </head>
 <body>
-    <div id="navigation-project">
+    <div><id="navigation-project">
 <nav>
     <ul>
         <li class="active"><a href="#">Home</a></li>
@@ -29,6 +29,7 @@ Tested:  September 14, 2023
             </ul>
         </li>
     </ul>
-</nav> </div>
+</nav> 
+</div>
 </body>
 </html>
