--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -18,15 +18,14 @@ Tested:  September 3, 2023
         href="nav.css">
 </head>
 <body>
-    <div><id="navigation-home">
+    <div>
 <nav>
     <ul>
-        <id="navigation-home"><li>Home</li>
+        <li>Home</li>
         <li>About</li>
         <li>#projects.html</li>
     </ul>
 </nav>
-</id>
 </div>
 <br>
     <main>
