--- a/islt_7310/project.html
+++ b/islt_7310/project.html
@@ -16,8 +16,8 @@ Tested:  September 14, 2023
         href="nav.css">
 </head>
 <body>
-    <div><id="navigation-project">
 <nav>
+<div>
     <ul>
         <li class="active"><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
@@ -29,7 +29,7 @@ Tested:  September 14, 2023
             </ul>
         </li>
     </ul>
-</nav> 
 </div>
+</nav> 
 </body>
 </html>
