--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -6,7 +6,7 @@ Title:  About Me
 Use:  To allow users to get to know me as a person.
 Author:  Kasey Freeman
 Developed: August 31, 2023
-Tested:  September 13, 2023
+Tested:  September 17, 2023
 ******************************************************************************
 -->
 <html lang="en-US">
@@ -39,7 +39,33 @@ Tested:  September 13, 2023
             <br>
 
             <blockquote> A dog is the only thing on earth that loves you more than you love yourself. - George Eliot</blockquote>
-    <footer>
+<div>
+            <nav>
+                <ul>
+                    <li class="active"><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">#projects.html</a>
+                    <ul>
+                        <li><a href="#">Link 1</a></li>
+                        <li><a href="#">Link 2</a></li>
+                        <li><a href="#">Link 3</a></li>
+                    </ul>
+                    <li><a href="#">reflection.html</a></li>
+                    <ul>
+                        <li><a href="#">Link 1</a></li>
+                        <li><a href="#">Link 2</a></li>
+                        <li><a href="#">Link 3</a></li>
+                    </ul>
+                    <li><a href="#">#contact.html</a></li>
+                    <ul>
+                        <li><a href="#">Link 1</a></li>
+                        <li><a href="#">Link 2</a></li>
+                        <li><a href="#">Link 3</a></li>
+                    </ul>
+                </ul>
+            </nav>
+        </div>
+            <footer>
         Kasey Freeman, kefreeman@umsystem.edu. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
     </footer>
  </body>
