--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -5,7 +5,7 @@ Title:  Home page
 Use:  Greeting users of my site and providing an introduction.
 Author:  Kasey Freeman
 Developed: September 1, 2023
-Tested:  September 3, 2023
+Tested:  September 17, 2023
 ******************************************************************************
 -->
 <html lang="en-US">
@@ -20,9 +20,26 @@ Tested:  September 3, 2023
 <body>
 <nav>
     <ul>
-        <li>Home</li>
-        <li>About</li>
-        <li>#projects.html</li>
+        <li class="active"><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">#projects.html</a>
+        <ul>
+            <li><a href="#">Link 1</a></li>
+            <li><a href="#">Link 2</a></li>
+            <li><a href="#">Link 3</a></li>
+        </ul>
+        <li><a href="#">reflection.html</a></li>
+        <ul>
+            <li><a href="#">Link 1</a></li>
+            <li><a href="#">Link 2</a></li>
+            <li><a href="#">Link 3</a></li>
+        </ul>
+        <li><a href="#">#contact.html</a></li>
+        <ul>
+            <li><a href="#">Link 1</a></li>
+            <li><a href="#">Link 2</a></li>
+            <li><a href="#">Link 3</a></li>
+        </ul>
     </ul>
 </nav>
 <br>
