--- a/islt_7310/project.html
+++ b/islt_7310/project.html
@@ -5,7 +5,7 @@ Title:  Projects page
 Use:  Display projects that Kasey has worked on
 Author:  Kasey Freeman
 Developed: September 14, 2023
-Tested:  September 14, 2023
+Tested:  September 17, 2023
 ******************************************************************************
 -->
 <html lang="en-US">
@@ -16,18 +16,29 @@ Tested:  September 14, 2023
         href="nav.css">
 </head>
 <body>
-<nav>
-    <ul>
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">#projects.html</a>
+    <nav>
+        <ul>
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">#projects.html</a>
             <ul>
                 <li><a href="#">Link 1</a></li>
                 <li><a href="#">Link 2</a></li>
                 <li><a href="#">Link 3</a></li>
             </ul>
-        </li>
-    </ul>
-</nav> 
+            <li><a href="#">reflection.html</a></li>
+            <ul>
+                <li><a href="#">Link 1</a></li>
+                <li><a href="#">Link 2</a></li>
+                <li><a href="#">Link 3</a></li>
+            </ul>
+            <li><a href="#">#contact.html</a></li>
+            <ul>
+                <li><a href="#">Link 1</a></li>
+                <li><a href="#">Link 2</a></li>
+                <li><a href="#">Link 3</a></li>
+            </ul>
+        </ul>
+    </nav>
 </body>
 </html>
