--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -12,7 +12,11 @@ Tested:  September 17, 2023
 <html lang="en-US">
 <head>
     <meta charset="utf-8">
-        <title>Page Title</title>
+        <title>About Me</title>
+        <link rel="stylesheet" 
+        href="style.css">
+        <link rel="stylesheet"
+        href="nav.css">
 </head>
 <body>
         <h1> Kasey Freeman </h1>
@@ -49,18 +53,21 @@ Tested:  September 17, 2023
                         <li><a href="#">Link 1</a></li>
                         <li><a href="#">Link 2</a></li>
                         <li><a href="#">Link 3</a></li>
+                    </li>
                     </ul>
-                    <li><a href="#">reflection.html</a></li>
+                    <li><a href="#">reflection.html</a>
                     <ul>
                         <li><a href="#">Link 1</a></li>
                         <li><a href="#">Link 2</a></li>
                         <li><a href="#">Link 3</a></li>
-                    </ul>
+                    </li>
+                    </ul> 
                     <li><a href="#">#contact.html</a></li>
                     <ul>
                         <li><a href="#">Link 1</a></li>
                         <li><a href="#">Link 2</a></li>
                         <li><a href="#">Link 3</a></li>
+                    </li>
                     </ul>
                 </ul>
             </nav>
