--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -18,30 +18,33 @@ Tested:  September 17, 2023
         href="nav.css">
 </head>
 <body>
-<nav>
-    <ul>
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">#projects.html</a>
+    <nav>
         <ul>
-            <li><a href="#">Link 1</a></li>
-            <li><a href="#">Link 2</a></li>
-            <li><a href="#">Link 3</a></li>
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">#projects.html</a>
+            <ul>
+                <li><a href="#">Link 1</a></li>
+                <li><a href="#">Link 2</a></li>
+                <li><a href="#">Link 3</a></li>
+            </li>
+            </ul>
+            <li><a href="#">reflection.html</a>
+            <ul>
+                <li><a href="#">Link 1</a></li>
+                <li><a href="#">Link 2</a></li>
+                <li><a href="#">Link 3</a></li>
+            </li>
+            </ul> 
+            <li><a href="#">#contact.html</a></li>
+            <ul>
+                <li><a href="#">Link 1</a></li>
+                <li><a href="#">Link 2</a></li>
+                <li><a href="#">Link 3</a></li>
+            </li>
+            </ul>
         </ul>
-        <li><a href="#">reflection.html</a></li>
-        <ul>
-            <li><a href="#">Link 1</a></li>
-            <li><a href="#">Link 2</a></li>
-            <li><a href="#">Link 3</a></li>
-        </ul>
-        <li><a href="#">#contact.html</a></li>
-        <ul>
-            <li><a href="#">Link 1</a></li>
-            <li><a href="#">Link 2</a></li>
-            <li><a href="#">Link 3</a></li>
-        </ul>
-    </ul>
-</nav>
+    </nav>
 <br>
     <main>
     <h1 id="heading1">Welcome!</h1>
