--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -18,34 +18,7 @@ Tested:  September 17, 2023
         href="nav.css">
 </head>
 <body>
-    <nav>
-        <ul>
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">#projects.html</a>
-            <ul>
-                <li><a href="#">Link 1</a></li>
-                <li><a href="#">Link 2</a></li>
-                <li><a href="#">Link 3</a></li>
-            </li>
-            </ul>
-            <li><a href="#">reflection.html</a>
-            <ul>
-                <li><a href="#">Link 1</a></li>
-                <li><a href="#">Link 2</a></li>
-                <li><a href="#">Link 3</a></li>
-            </li>
-            </ul> 
-            <li><a href="#">#contact.html</a></li>
-            <ul>
-                <li><a href="#">Link 1</a></li>
-                <li><a href="#">Link 2</a></li>
-                <li><a href="#">Link 3</a></li>
-            </li>
-            </ul>
-        </ul>
-    </nav>
-<br>
+
     <main>
     <h1 id="heading1">Welcome!</h1>
     <h3>Getting to know me</h3>
@@ -60,7 +33,36 @@ Tested:  September 17, 2023
         </p>
     </div>
     <br>
-<nav></nav>
+    <div>
+    <nav>
+        <ul class="ul li">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">#projects.html</a>
+            <ul class="ul li">
+                <li><a href="#">Link 1</a></li>
+                <li><a href="#">Link 2</a></li>
+                <li><a href="#">Link 3</a></li>
+            </li>
+            </ul class="ul li">
+            <li><a href="#">reflection.html</a>
+            <ul class="ul li">
+                <li><a href="#">Link 1</a></li>
+                <li><a href="#">Link 2</a></li>
+                <li><a href="#">Link 3</a></li>
+            </li>
+            </ul> 
+            <li><a href="#">#contact.html</a>
+            <ul class="ul li">
+                <li><a href="#">Link 1</a></li>
+                <li><a href="#">Link 2</a></li>
+                <li><a href="#">Link 3</a></li>
+            </li>
+            </ul>
+        </ul>
+    </nav>
+</div>
+<br>
 </main>
         <br>
 <footer>
