--- a/islt_7310/reflection.html
+++ b/islt_7310/reflection.html
@@ -52,13 +52,13 @@ Tested:  September 17, 2023
                 </li>
                 </ul>
                 <li><a href="#">reflection.html</a>
-                <ul>
-                    <li><a href="#">Link 1</a></li>
-                    <li><a href="#">Link 2</a></li>
-                    <li><a href="#">Link 3</a></li>
-                </li>
-                </ul> 
-                <li><a href="#">#contact.html</a></li>
+                    <ul>
+                        <li><a href="#">Link 1</a></li>
+                        <li><a href="#">Link 2</a></li>
+                        <li><a href="#">Link 3</a></li>
+                    </li>
+                    </ul>
+                <li><a href="#">#contact.html</a>
                 <ul>
                     <li><a href="#">Link 1</a></li>
                     <li><a href="#">Link 2</a></li>
