--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -19,6 +19,7 @@ Tested:  September 17, 2023
         href="nav.css">
 </head>
 <body>
+    <main>
         <h1> Kasey Freeman </h1>
         <h3> Getting to know me </h3>
         <p> My name is Kasey Freeman. I have a Bachelor of Arts in International Studies
@@ -62,7 +63,7 @@ Tested:  September 17, 2023
                         <li><a href="#">Link 3</a></li>
                     </li>
                     </ul> 
-                    <li><a href="#">#contact.html</a></li>
+                    <li><a href="#">#contact.html</a>
                     <ul>
                         <li><a href="#">Link 1</a></li>
                         <li><a href="#">Link 2</a></li>
@@ -72,6 +73,7 @@ Tested:  September 17, 2023
                 </ul>
             </nav>
         </div>
+    </main>
             <footer>
         Kasey Freeman, kefreeman@umsystem.edu. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
     </footer>
