--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -33,41 +33,39 @@ Tested:  September 17, 2023
         </p>
     </div>
     <br>
-
-    <nav>
-        <ul class="ul li">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">#projects.html</a>
-            <ul class="ul li">
-                <li><a href="#">Link 1</a></li>
-                <li><a href="#">Link 2</a></li>
-                <li><a href="#">Link 3</a></li>
-            </li>
-            </ul class="ul li">
-            <li><a href="#">reflection.html</a>
-            <ul class="ul li">
-                <li><a href="#">Link 1</a></li>
-                <li><a href="#">Link 2</a></li>
-                <li><a href="#">Link 3</a></li>
-            </li>
-            </ul> 
-            <li><a href="#">#contact.html</a>
-            <ul class="ul li">
-                <li><a href="#">Link 1</a></li>
-                <li><a href="#">Link 2</a></li>
-                <li><a href="#">Link 3</a></li>
-            </li>
+    <div>
+        <nav>
+            <ul>
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">#projects.html</a>
+                <ul>
+                    <li><a href="#">Link 1</a></li>
+                    <li><a href="#">Link 2</a></li>
+                    <li><a href="#">Link 3</a></li>
+                </li>
+                </ul>
+                <li><a href="#">reflection.html</a>
+                <ul>
+                    <li><a href="#">Link 1</a></li>
+                    <li><a href="#">Link 2</a></li>
+                    <li><a href="#">Link 3</a></li>
+                </li>
+                </ul> 
+                <li><a href="#">#contact.html</a>
+                <ul>
+                    <li><a href="#">Link 1</a></li>
+                    <li><a href="#">Link 2</a></li>
+                    <li><a href="#">Link 3</a></li>
+                </li>
+                </ul>
             </ul>
-        </ul>
-    </nav>
-
-<br>
+        </nav>
+    </div>
 </main>
         <br>
 <footer>
             Kasey Freeman, kefreeman@umsystem.edu. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
 </footer>
 </body>
-
 </html>
