--- a/islt_7310/reflection.html
+++ b/islt_7310/reflection.html
@@ -37,37 +37,37 @@ Tested:  September 17, 2023
                 Expectations for distance education programs have changed and evolved and continue to do so frequently. Due to this, my professional development opportunities focus on understanding the tools to help our organization become better leaders in this area and understanding the tools that will give our students an equitable and equal experience across the programs I serve. With the upcoming demographic slide of 2025, online programs can shine and serve nontraditional students like never before. I look forward to being a part of that and seeing how this area of higher education continues to evolve and adapt.
              </p>   
 
-            
-        </div>
-        <br>
-        <nav>
-            <ul>
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">#projects.html</a>
-                <ul>
-                    <li><a href="#">Link 1</a></li>
-                    <li><a href="#">Link 2</a></li>
-                    <li><a href="#">Link 3</a></li>
-                </li>
-                </ul>
-                <li><a href="#">reflection.html</a>
+            <br> 
+             <div>
+                <nav>
                     <ul>
-                        <li><a href="#">Link 1</a></li>
-                        <li><a href="#">Link 2</a></li>
-                        <li><a href="#">Link 3</a></li>
-                    </li>
+                        <li class="active"><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">#projects.html</a>
+                        <ul>
+                            <li><a href="#">Link 1</a></li>
+                            <li><a href="#">Link 2</a></li>
+                            <li><a href="#">Link 3</a></li>
+                        </li>
+                        </ul>
+                        <li><a href="#">reflection.html</a>
+                        <ul>
+                            <li><a href="#">Link 1</a></li>
+                            <li><a href="#">Link 2</a></li>
+                            <li><a href="#">Link 3</a></li>
+                        </li>
+                        </ul> 
+                        <li><a href="#">#contact.html</a>
+                        <ul>
+                            <li><a href="#">Link 1</a></li>
+                            <li><a href="#">Link 2</a></li>
+                            <li><a href="#">Link 3</a></li>
+                        </li>
+                        </ul>
                     </ul>
-                <li><a href="#">#contact.html</a>
-                <ul>
-                    <li><a href="#">Link 1</a></li>
-                    <li><a href="#">Link 2</a></li>
-                    <li><a href="#">Link 3</a></li>
-                </li>
-                </ul>
-            </ul>
-        </nav>
-    </main>
+                </nav>
+            </div>
+        </main>
             <br>
     <footer>
         Kasey Freeman, kefreeman@umsystem.edu. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
