--- a/islt_7310/project.html
+++ b/islt_7310/project.html
@@ -16,32 +16,38 @@ Tested:  September 17, 2023
         href="nav.css">
 </head>
 <body>
-<nav>
-    <ul>
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">#projects.html</a>
-        <ul>
-            <li><a href="#">Link 1</a></li>
-            <li><a href="#">Link 2</a></li>
-            <li><a href="#">Link 3</a></li>
-        </li>
-        </ul>
-        <li><a href="#">reflection.html</a>
-        <ul>
-            <li><a href="#">Link 1</a></li>
-            <li><a href="#">Link 2</a></li>
-            <li><a href="#">Link 3</a></li>
-        </li>
-        </ul> 
-        <li><a href="#">#contact.html</a></li>
-        <ul>
-            <li><a href="#">Link 1</a></li>
-            <li><a href="#">Link 2</a></li>
-            <li><a href="#">Link 3</a></li>
-        </li>
-        </ul>
-    </ul>
-</nav>
+    <main>
+        <div>
+            <nav>
+                <ul>
+                    <li class="active"><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">#projects.html</a>
+                    <ul>
+                        <li><a href="#">Link 1</a></li>
+                        <li><a href="#">Link 2</a></li>
+                        <li><a href="#">Link 3</a></li>
+                    </li>
+                    </ul>
+                    <li><a href="#">reflection.html</a>
+                    <ul>
+                        <li><a href="#">Link 1</a></li>
+                        <li><a href="#">Link 2</a></li>
+                        <li><a href="#">Link 3</a></li>
+                    </li>
+                    </ul> 
+                    <li><a href="#">#contact.html</a>
+                    <ul>
+                        <li><a href="#">Link 1</a></li>
+                        <li><a href="#">Link 2</a></li>
+                        <li><a href="#">Link 3</a></li>
+                    </li>
+                    </ul>
+                </ul>
+            </nav>
+        </div>
+    </main>
+<footer>            Kasey Freeman, kefreeman@umsystem.edu. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
+</footer>
 </body>
 </html>
