--- a/islt_7310/reflection.html
+++ b/islt_7310/reflection.html
@@ -69,8 +69,6 @@ Tested:  September 17, 2023
             </div>
         </main>
             <br>
-    <footer>
-        Kasey Freeman, kefreeman@umsystem.edu. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
-    </footer>
+    <footer>Kasey Freeman, kefreeman@umsystem.edu. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.</footer>
 </body>
 </html>
